<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/weight-label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:labelFor="@id/weight_input"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/height-label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight-label" />

    <TextView
        android:id="@+id/height-label"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="305dp"
        android:labelFor="@id/height_input"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_input"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height-label" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="238dp"
        android:onClick="calculateBMI"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_input" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_to_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/go_to_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="28dp"
        android:text="@string/show_me_recipe_button"
        android:visibility="invisible"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/back_to_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="59dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="17dp"
        android:text="@string/go_to_recipe_label"
        app:layout_constraintBottom_toTopOf="@+id/back_to_start_button"
        app:layout_constraintEnd_toStartOf="@+id/go_to_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/go_to_recipe_for_normalweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_me_recipe_button"
        android:visibility="invisible"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toTopOf="@+id/back_to_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/go_to_recipe_for_obese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_me_recipe_button"
        android:visibility="invisible"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/back_to_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/result" />

</androidx.constraintlayout.widget.ConstraintLayout>